# DAC-JAX

./: .gitignore  README.md  setup.cfg
conf/: 1gpu.yml  base.yml  neuronic.yml
conf/ablations/: diff-mb.yml  equal-mb.yml  no-adv.yml  no-low-hop.yml  no-mb.yml  no-mpd-msd.yml  no-mpd.yml
conf/downsampling/: 1024x.yml  128x.yml  1536x.yml  768x.yml
conf/final/: 16khz.yml  24khz.yml  44khz-16kbps.yml  44khz.yml
conf/quantizer/: 24kbps.yml
jobs/: benchmark.slurm  job.slurm  simple.slurm
scripts/: audio_tree_core.py  benchmark.py  compute_entropy.py  data_transforms.py  evaluate.py  get_samples.py  input_pipeline.py  organize_daps.py  save_test_set.py  train.py
src/dac_jax/: __init__.py  __main__.py  audio_utils.py  data_transforms.py  load_torch_weights.py  resample.py  setup.cfg
src/dac_jax/audiotree/: __init__.py  core.py
src/dac_jax/audiotree/datasources/: __init__.py  core.py
src/dac_jax/audiotree/transforms/: __init__.py  core.py  helpers.py
src/dac_jax/model/: __init__.py  core.py  dac.py  discriminator.py  encodec.py
src/dac_jax/nn/: encodec_layers.py  encodec_quantize.py  layers.py  loss.py  quantize.py  weight_norm.py
src/dac_jax/utils/: __init__.py  decode.py  encode.py  load_torch_weights.py  load_torch_weights_encodec.py
tests/: README.md  encodec_equivalence.py  test_audio_utils.py  test_binding.py  test_cli.py  test_dac_equivalence.py  test_encodec_equivalence.py  test_resample.py  test_torch_equivalence.py  test_train.py  test_transforms.py
tests/audiotree/transforms/: test_core.py  test_helpers.py
