[metadata]
name = dac_jax
version = attr: dac_jax.__version__
url = https://github.com/DBraun/DAC-JAX
author = David Braun
author_email = braun@ccrma.stanford.edu
description = Descript Audio Codec in JAX.
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords =
    audio
    compression
    machine learning
license = MIT
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Artistic Software
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Editors
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    argbind>=0.3.7
    descript-audiotools
    chex
    clu
    dm_aux @ git+https://github.com/DBraun/dm_aux.git@DBraun-patch-1
    einops
    flax>=0.8.2
    grain>=0.1.0
    jaxloudnorm @ git+https://github.com/DBraun/jaxloudnorm.git@feature/speed-optimize
    librosa>=0.10.1
    typing-extensions~=4.10.0
    tqdm

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    pandas
    pandas
    pesq
    encodec
