[metadata]
name = dac_jax
version = attr: dac_jax.__version__
url = https://github.com/DBraun/DAC-JAX
author = David Braun
author_email = braun@ccrma.stanford.edu
description = Descript Audio Codec and EnCodec in JAX.
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords =
    audio
    compression
    machine learning
license = MIT
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Artistic Software
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Editors
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    argbind @ git+https://github.com/DBraun/argbind.git@improve.subclasses
    audiotree>=0.2.0
    clu>=0.0.12
    dm_aux @ git+https://github.com/DBraun/dm_aux.git@DBraun-patch-2
    einops>=0.8.0
    grain==0.2.*
    huggingface-hub
    jax-ai-stack>=2025.2.5
    jaxloudnorm @ git+https://github.com/boris-kuz/jaxloudnorm.git
    librosa>=0.10.1
    omegaconf
    tqdm>=4.66.4

[options.packages.find]
where = src

[options.extras_require]
dev =
    audiocraft
    descript-audiotools
    descript-audio-codec
    pytest
    pytest-cov
    pandas
    pandas
    pesq
    encodec
