[metadata]
name = dac_jax
version = attr: dac_jax.__version__
url = https://github.com/DBraun/DAC-JAX
author = David Braun
author_email = braun@ccrma.stanford.edu
description = Descript Audio Codec in JAX.
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords =
    audio
    compression
    machine learning
license = MIT
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Artistic Software
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Editors
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    argbind>=0.3.7
    clu
    dm_aux
    einops
    flax
    jaxloudnorm @ https://github.com/boris-kuz/jaxloudnorm.git@main
    librosa
    tensorflow
    torch
    tqdm

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    psutil
    pandas
    pandas
    pesq
    encodec
